# context_manager_rs

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  publish.yaml
context_manager/: Cargo.toml
context_manager/src/: lib.rs  t_async.rs  t_sync.rs
context_manager/tests/ui/fail/: async_macro_sync_function.rs  async_macro_sync_function.stderr  sync_macro_sync_const_function.rs  sync_macro_sync_const_function.stderr
context_manager/tests/ui/pass/: async_macro_async_function.rs  sync_macro_async_function.rs  sync_macro_sync_function.rs
context_manager_macro/: Cargo.toml
context_manager_macro/src/: lib.rs
