[package]
name = "context_manager"
version = "0.1.3"
edition = "2021"
description = "Python's like context_managers in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/macisamuele/context_manager_rs"
documentation = "https://docs.rs/context_manager_macro"
readme = "README.md"

[dependencies]
context_manager_macro = "=0.1.3"

[dev-dependencies]
tokio = {version = "1", features = ["macros", "rt", "rt-multi-thread"] }
trybuild = "1"
